# ttime_bot

./: .env.example  Cargo.toml  Dockerfile  README.md  config.md
.github/workflows/: deploy.yml
src/: config.rs  error.rs  main.rs  oauth.rs
src/services/tracking_time/: cache.rs  client.rs  fuzzy.rs  mod.rs  models.rs  sessions.rs
src/tools/: mod.rs  tracking_time.rs
